--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^4.33.0",
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -28,10 +29,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
